2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/IConsole.cs,
	  MonoDevelop.Core.Execution/ExternalConsoleFactory.cs: Added logging
	  support to IConsole.
	* MonoDevelop.Core.Execution/ProcessWrapper.cs: Fix locking.
	* MonoDevelop.Core.Execution/ProcessService.cs: Log the exit code if it
	  is not zero.

2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs: Read output from
	  process by blocks, not by lines. Fixes bug 368479 - Delayed printf
	  from a gtk+ app in MD.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/Properties.cs, MonoDevelop.Core/PropertyService.cs,
	  MonoDevelop.Core/SystemAssemblyService.cs: New project model
	  changes.

2008-04-29  Aaron Bockover  <abock@gnome.org>

	* MonoDevelop.Core.Execution/ProcessService.cs: Use the new 
	ExternalConsoleLocator instead of hardcoding xterm when running builds
	on an external console

	* MonoDevelop.Core.Execution/ExternalConsoleLocator.cs: First pass at
	reasonably resolving a working and preferred terminal for Linux users;
	currently only uses GNOME Terminal if running under GNOME, xterm otherwise;
	can be easily extended for Konsole, but it was acting strange when I tried,
	so someone else needs to do this if there's interest; also this is sort
	of a temporary measure in part until the external console stuff can be
	properly moved into the platform service layer so it'll work on Windows
	and OS X along with various Linux/DE flavors

	* Makefile.am:
	* MonoDevelop.Core.mdp: Updated build with new file

2008-03-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Logging/ConsoleCrayon.cs,
	  MonoDevelop.Core.Logging/ConsoleLogger.cs, Makefile.am,
	  MonoDevelop.Core.mdp, MonoDevelop.Core/LoggingService.cs: Enable console
	  logging in colour by default. Thanks to Aaron Bockover for the